--verbose-objects="-modulename" not working
I am using: vlc --verbose 2 --file-logging vlc.log --log-verbose 2 ...
When I try to cut the output from a certain module by adding, e.g., --verbose-objects=-modulename, nothing happens.
I also tried, e.g., --verbose-objects=-access or --verbose-objects=-main or --verbose-objects=-dynamicoverlay but, again, nothing happens. Further, I tried it without "=" and with adding quotation marks around the value string.