Mark --verbose-objects obsolete (refs #7737)